Reverted to each type having it's own sub route.

--- a/templates/chart.tmpl
+++ b/templates/chart.tmpl
@@ -7,7 +7,7 @@
 <script src="/assets/js/script.js"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
-	initChartPage({{.Graphs}}, {{.DataProvider}});
+	initChartPage({{.Graphs}}, {{.DataProvider}}, "{{.Kind}}");
 });
 </script>
 <link href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.2/select2.css" rel="stylesheet" type="text/css" media="all">
